force-app/main/default/objects/AgentGov_Session__c/AgentGov_Session__c.object-meta.xml
<CustomObject>
    <description>Tracks active agent sessions with start/end times and resource consumption.</description>
    <label>Agent Session</label>
    <nameField>
        <displayFormat>SES-{0000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>