force-app/main/default/objects/AgentGov_Session__c/fields/Actions_Count__c.field-meta.xml
<CustomField>
    <fullName>Actions_Count__c</fullName>
    <label>Actions Count</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total number of actions performed during this session</description>
</CustomField>