force-app/main/default/objects/AgentGov_Session__c/fields/Active_Session_Key__c.field-meta.xml
<CustomField>
    <fullName>Active_Session_Key__c</fullName>
    <label>Active Session Key</label>
    <type>Text</type>
    <length>18</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <caseSensitive>true</caseSensitive>
    <description>The agent's registration Id while the session is Active, and blank once it ends. The uniqueness constraint guarantees at most one active session per agent, even when two transactions start one at the same moment. Maintained by AgentGovSessionTrigger.</description>
</CustomField>