force-app/main/default/objects/AgentGov_Session__c/fields/Agent_Registration__c.field-meta.xml
<CustomField>
    <fullName>Agent_Registration__c</fullName>
    <label>Agent Registration</label>
    <type>MasterDetail</type>
    <description>Parent agent registration for this session</description>
    <referenceTo>AgentGov_Registration__c</referenceTo>
    <relationshipLabel>Agent Sessions</relationshipLabel>
    <relationshipName>Agent_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>