force-app/main/default/objects/AgentGov_Session__c/fields/API_Calls_Used__c.field-meta.xml
<CustomField>
    <fullName>API_Calls_Used__c</fullName>
    <label>API Calls Used</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Number of API calls consumed during this session</description>
</CustomField>