force-app/main/default/objects/AgentGov_Session__c/fields/DML_Statements_Used__c.field-meta.xml
<CustomField>
    <fullName>DML_Statements_Used__c</fullName>
    <label>DML Statements Used</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Number of DML statements consumed during this session</description>
</CustomField>