force-app/main/default/objects/AgentGov_Session__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <label>Duration (Minutes)</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>1</scale>
    <formula>(BLANKVALUE(Session_End__c, Last_Activity__c) - Session_Start__c) * 1440</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <description>Minutes from the start of the session to its end, or to its last activity while it is still running.</description>
</CustomField>