force-app/main/default/objects/AgentGov_Session__c/fields/End_Reason__c.field-meta.xml
<CustomField>
    <fullName>End_Reason__c</fullName>
    <label>End Reason</label>
    <type>Picklist</type>
    <description>Why the session ended.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Idle</fullName>
            </value>
            <value>
                <fullName>Max_Duration</fullName>
                <label>Maximum Duration</label>
            </value>
            <value>
                <fullName>Ended_By_Caller</fullName>
                <label>Ended by Caller</label>
            </value>
            <value>
                <fullName>Ended_By_Administrator</fullName>
                <label>Ended by Administrator</label>
            </value>
            <value>
                <fullName>Agent_Deactivated</fullName>
                <label>Agent Deactivated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>