force-app/main/default/objects/AgentGov_Session__c/fields/Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity__c</fullName>
    <label>Last Activity</label>
    <type>DateTime</type>
    <description>When the agent last did governed work in this session. A session with no activity for the idle window in AgentGov Settings is closed, and its end time is set to this value.</description>
</CustomField>