force-app/main/default/objects/AgentGov_Session__c/fields/Session_End__c.field-meta.xml
<CustomField>
    <fullName>Session_End__c</fullName>
    <label>Session End</label>
    <type>DateTime</type>
    <description>Timestamp when the agent session ended</description>
</CustomField>