force-app/main/default/objects/AgentGov_Session__c/fields/Session_Start__c.field-meta.xml
<CustomField>
    <fullName>Session_Start__c</fullName>
    <label>Session Start</label>
    <type>DateTime</type>
    <required>true</required>
    <description>Timestamp when the agent session started</description>
</CustomField>