force-app/main/default/objects/AgentGov_Session__c/fields/SOQL_Queries_Used__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Queries_Used__c</fullName>
    <label>SOQL Queries Used</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Number of SOQL queries consumed during this session</description>
</CustomField>