force-app/main/default/objects/AgentGov_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agent_Registration__c</columns>
    <columns>Status__c</columns>
    <columns>Session_Start__c</columns>
    <columns>Last_Activity__c</columns>
    <columns>Session_End__c</columns>
    <columns>End_Reason__c</columns>
    <columns>Actions_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>